# tsp

./: README.rst  Simulation.ipynb  pyproject.toml
tests/: test_tsp.py
tsp/: __init__.py  tsp.py
