[tool.poetry]
name = "tsp"
version = "0.1.0"
description = ""
authors = ["Franziska Witzel <franziska.witzel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.0"
numpy = "^1.19.1"
scipy = "^1.5.2"
matplotlib = "^3.3.0"
seaborn = "^0.10.1"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
